manager-Level functionality

--- a/changepassword.html
+++ b/changepassword.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="">
 	<link rel="icon" href="../../favicon.ico">
 
-	<title>CS 6301 Project</title>
+	<title>CS 539 Project</title>
 
 	<!-- Bootstrap core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="index.html">MAGE</a>
+				<a class="navbar-brand" href="index.html">Home</a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
@@ -91,13 +91,18 @@
 						<h3 id="lastname" class="panel-title"></h3>
 						<br/>
 						<div class="input-lg-form-control">
+								<label>Current Password</label>
+								<input type="password" name="Current Password" class="form-control" id="current password" value="" placeholder="New Password">
+						</div>
+						<br/>
+						<div class="input-lg-form-control">
 								<label>New Password</label>
-								<input type="password" name="Last Name" class="form-control" id="newpassword" value="" placeholder="New Password">
+								<input type="password" name="New Password" class="form-control" id="new password" value="" placeholder="New Password">
 						</div>
 						<br/>
 						<div class="input-lg-form-control">
 								<label>Repeat New Password</label>
-								<input type="password" name="Last Name" class="form-control" id="repeatnewpassword" value="" placeholder="Repeat New Password">
+								<input type="password" name="Repeat New Password" class="form-control" id="repeat newpassword" value="" placeholder="Repeat New Password">
 						</div>
 						<br/>
 						<a class ="col-xs-12 btn btn-primary btn-load" id="changepasswordbutton">Change Password</a>
