--- a/edit_account.html
+++ b/edit_account.html
@@ -83,7 +83,7 @@
 						</div>
 
                         <div class="form-group col-lg-6">
-                            <label>Last Name</label>
+                            <label>Nick Name</label>
                             <input type="" name="Nick Name" class="form-control" id="nickname" value="" placeholder="Nick Name">
                         </div>
 
